Add coffee consumption graph
